# CppIsTheBestLang

./: .gitignore  CMakeLists.txt  README.md
src/: fast_io.cpp  struct_data_sort.cpp
src/basis/: binary_search.cpp  diff_array.cpp
src/basis/binary_search/: example.cpp  problem.cpp  template.cpp
src/basis/brute_force/: problem.cpp
src/basis/circular_section/: problem.cpp
src/basis/diff_array/: example.cpp  template.cpp
src/basis/implemention/: template.cpp
src/basis/interactive/: problem.cpp
src/basis/performance/: problem.cpp
src/basis/range/: problem.cpp  template.cpp
src/basis/recursion/: problem.cpp
src/basis/stack/: problem.cpp
src/basis/ternary_search/: template.cpp
src/basis/tree_node/: problem.cpp  template.cpp
src/basis/two_pointer/: example.cpp  problem.cpp
src/data_structure/: segment_tree.cpp
src/data_structure/bit_set/: problem.cpp
src/data_structure/segment_tree/: example.cpp  problem.cpp  template.cpp
src/data_structure/small_heapq/: template.cpp
src/data_structure/sorted_list/: template.cpp
src/data_structure/sparse_table/: example.cpp  template.cpp
src/data_structure/tree_array/: example.cpp  problem.cpp  template.cpp
src/data_structure/trie_like/: problem.cpp
src/dp/bag_dp/: problem.cpp  template.cpp
src/dp/digital_dp/: example.cpp  problem.cpp  template.cpp
src/dp/game_dp/: problem.cpp
src/dp/interval_dp/: example.cpp  problem.cpp
src/dp/linear_dp/: problem.cpp
src/dp/matrix_dp/: problem.cpp  template.cpp
src/dp/outline_dp/: problem.cpp
src/dp/prob_dp/: problem.cpp
src/dp/state_dp/: problem.cpp
src/dp/tree_dp/: problem.cpp  template.cpp
src/graph/dijkstra/: example.cpp  problem.cpp  template.cpp
src/graph/euler_path/: template.cpp
src/graph/network_flow/: example.cpp  problem.cpp
src/graph/tarjan/: template.cpp
src/graph/tree_lca/: problem.cpp  template.cpp
src/graph/union_find/: example.cpp  template.cpp  template.h
src/mathmatics/comb_perm/: example.cpp  template.cpp
src/mathmatics/fast_power/: example.cpp  problem.cpp  template.cpp
src/mathmatics/high_precision/: problem.cpp
src/mathmatics/prime_factor/: problem.cpp  template.cpp
src/strings/kmp/: template.cpp
src/strings/string_hash/: problem.cpp
src/strings/suffix_array/: problem.cpp  template.cpp
src/test/codeforces/: problem_1.cpp
src/test/leetcode/: problem_1.cpp
test/leetcode/: problem_0.cpp
tests/: template.cpp
tests/codeforces/: problem_a.cpp  problem_b.cpp  problem_c.cpp  problem_d.cpp  problem_e.cpp  problem_f.cpp  problem_h.cpp  simple.cpp  template.cpp
tests/leetcode/: problem_1.cpp  problem_2.cpp
