

cmake_minimum_required(VERSION 3.26)
project(CppIsTheBestLang)

set(CMAKE_CXX_STANDARD 14)


include_directories(.)
include_directories(src)
include_directories(tests)

add_executable(binary_search src/basis/binary_search/example.cpp)
add_executable(brute_force src/basis/brute_force/example.cpp)
add_executable(circular_section src/basis/circular_section/example.cpp)
add_executable(construction src/basis/construction/example.cpp)
add_executable(date src/basis/date/example.cpp)
add_executable(diff_array src/basis/diff_array/example.cpp)
add_executable(hash src/basis/hash/example.cpp)
add_executable(implemention src/basis/implemention/example.cpp)
add_executable(interactive src/basis/interactive/example.cpp)
add_executable(performance src/basis/performance/example.cpp)
add_executable(range src/basis/range/example.cpp)
add_executable(recursion src/basis/recursion/example.cpp)
add_executable(serialization src/basis/serialization/example.cpp)
add_executable(stack src/basis/stack/example.cpp)
add_executable(ternary_search src/basis/ternary_search/example.cpp)
add_executable(tree_node src/basis/tree_node/example.cpp)
add_executable(two_pointer src/basis/two_pointer/example.cpp)
add_executable(various_sort src/basis/various_sort/example.cpp)
add_executable(associative_array src/data_structure/associative_array/example.cpp)
add_executable(bit_set src/data_structure/bit_set/example.cpp)
add_executable(block_size src/data_structure/block_size/example.cpp)
add_executable(linked_list src/data_structure/linked_list/example.cpp)
add_executable(list_node src/data_structure/list_node/example.cpp)
add_executable(monotonic_stack src/data_structure/monotonic_stack/example.cpp)
add_executable(priority_queue src/data_structure/priority_queue/example.cpp)
add_executable(segment_tree src/data_structure/segment_tree/example.cpp)
add_executable(small_heapq src/data_structure/small_heapq/example.cpp)
add_executable(sorted_list src/data_structure/sorted_list/example.cpp)
add_executable(sparse_table src/data_structure/sparse_table/example.cpp)
add_executable(tree_array src/data_structure/tree_array/example.cpp)
add_executable(bag_dp src/dp/bag_dp/example.cpp)
add_executable(circle_dp src/dp/circle_dp/example.cpp)
add_executable(digital_dp src/dp/digital_dp/example.cpp)
add_executable(game_dp src/dp/game_dp/example.cpp)
add_executable(interval_dp src/dp/interval_dp/example.cpp)
add_executable(linear_dp src/dp/linear_dp/example.cpp)
add_executable(matrix_dp src/dp/matrix_dp/example.cpp)
add_executable(outline_dp src/dp/outline_dp/example.cpp)
add_executable(prob_dp src/dp/prob_dp/example.cpp)
add_executable(state_dp src/dp/state_dp/example.cpp)
add_executable(tree_dp src/dp/tree_dp/example.cpp)
add_executable(bigraph_weighted_match src/graph/bigraph_weighted_match/example.cpp)
add_executable(bst src/graph/bst/example.cpp)
add_executable(dijkstra src/graph/dijkstra/example.cpp)
add_executable(dominating_tree src/graph/dominating_tree/example.cpp)
add_executable(euler_path src/graph/euler_path/example.cpp)
add_executable(floyd src/graph/floyd/example.cpp)
add_executable(lgv src/graph/lgv/example.cpp)
add_executable(minimum_spanning_tree src/graph/minimum_spanning_tree/example.cpp)
add_executable(prufer src/graph/prufer/example.cpp)
add_executable(scc src/graph/scc/example.cpp)
add_executable(spfa src/graph/spfa/example.cpp)
add_executable(tarjan src/graph/tarjan/example.cpp)
add_executable(topological_sort src/graph/topological_sort/example.cpp)
add_executable(tree_diameter src/graph/tree_diameter/example.cpp)
add_executable(tree_diff_array src/graph/tree_diff_array/example.cpp)
add_executable(tree_lca src/graph/tree_lca/example.cpp)
add_executable(union_find src/graph/union_find/example.cpp)
add_executable(brain_storming src/greedy/brain_storming/example.cpp)
add_executable(longest_increasing_subsequence src/greedy/longest_increasing_subsequence/example.cpp)
add_executable(bit_operation src/mathmatics/bit_operation/example.cpp)
add_executable(cantor_expands src/mathmatics/cantor_expands/example.cpp)
add_executable(comb_perm src/mathmatics/comb_perm/example.cpp)
add_executable(convex_hull src/mathmatics/convex_hull/example.cpp)
add_executable(extend_crt src/mathmatics/extend_crt/example.cpp)
add_executable(extend_gcd src/mathmatics/extend_gcd/example.cpp)
add_executable(fast_power src/mathmatics/fast_power/example.cpp)
add_executable(geometry src/mathmatics/geometry/example.cpp)
add_executable(high_precision src/mathmatics/high_precision/example.cpp)
add_executable(lexico_graphical_order src/mathmatics/lexico_graphical_order/example.cpp)
add_executable(linear_basis src/mathmatics/linear_basis/example.cpp)
add_executable(multiplicative_inverse src/mathmatics/multiplicative_inverse/example.cpp)
add_executable(nim_game src/mathmatics/nim_game/example.cpp)
add_executable(number_theory src/mathmatics/number_theory/example.cpp)
add_executable(partion_fft src/mathmatics/partion_fft/example.cpp)
add_executable(peishu_theorem src/mathmatics/peishu_theorem/example.cpp)
add_executable(prime_factor src/mathmatics/prime_factor/example.cpp)
add_executable(scan_line src/mathmatics/scan_line/example.cpp)
add_executable(bfs src/search/bfs/example.cpp)
add_executable(dfs src/search/dfs/example.cpp)
add_executable(meet_in_middle src/search/meet_in_middle/example.cpp)
add_executable(ac_auto_machine src/strings/ac_auto_machine/example.cpp)
add_executable(expression src/strings/expression/example.cpp)
add_executable(kmp src/strings/kmp/example.cpp)
add_executable(lyndon_decomposition src/strings/lyndon_decomposition/example.cpp)
add_executable(manacher_palindrome src/strings/manacher_palindrome/example.cpp)
add_executable(palindrome_num src/strings/palindrome_num/example.cpp)
add_executable(string_hash src/strings/string_hash/example.cpp)
add_executable(suffix_array src/strings/suffix_array/example.cpp)
add_executable(trie src/strings/trie/example.cpp)
add_executable(problem_a tests/codeforces/problem_a.cpp)
add_executable(problem_b tests/codeforces/problem_b.cpp)
add_executable(problem_c tests/codeforces/problem_c.cpp)
add_executable(problem_d tests/codeforces/problem_d.cpp)
add_executable(codeforces tests/codeforces/template.cpp)

add_executable(problem_1 tests/leetcode/problem_1.cpp)
add_executable(problem_2 tests/leetcode/problem_2.cpp)
add_executable(problem_3 tests/leetcode/problem_3.cpp)
add_executable(problem_4 tests/leetcode/problem_4.cpp)
add_executable(leetcode tests/leetcode/template.cpp)